--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </ul>
     </nav>
     <h2>About</h2>
-    My name is obineche mary chinonso, I love coding, and i am always excite to learn new things, solve problems and
+    My name are obineche mary chinonso, I love coding, and i am always excite to learn new things, solve problems and
     give a satisfactory experience for all my clients.<br>
     Looking forward to working with you. Best reagards.
     <div>
