--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <meta name="viewpoint" content="width=device-width, initial-scale=1.0">
     <style>
         .heading-one {
             color: white;
@@ -16,7 +17,6 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            /*margin: 20px;*/
         }
 
         .dots-line {
@@ -150,8 +150,7 @@
     </p><br>
     <br>
     <div style="color: rgb(166, 17, 7); font-size: 40px;">
-        <button style="background-color: rgb(166, 17, 7); color: white; font-size: 24px; padding: 10px 20px;">CONTACT
-            ME</button>
+            <a href="mailto:obinechemary.12@gmail.com"><button style="background-color: rgb(166, 17, 7); color: white; font-size: 24px; padding: 10px 20px;">CONTACT
+                ME</button></a>
 </body>
-
 </html>
