--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -150,7 +149,9 @@
     </p><br>
     <br>
     <div style="color: rgb(166, 17, 7); font-size: 40px;">
-            <a href="mailto:obinechemary.12@gmail.com"><button style="background-color: rgb(166, 17, 7); color: white; font-size: 24px; padding: 10px 20px;">CONTACT
+        <a href="mailto:obinechemary.12@gmail.com"><button
+                style="background-color: rgb(166, 17, 7); color: white; font-size: 24px; padding: 10px 20px;">CONTACT
                 ME</button></a>
 </body>
+
 </html>
