--- a/index.html
+++ b/index.html
@@ -76,19 +76,17 @@
         .programmer-container {
             background-color: rgb(166, 17, 7);
             width: 100%;
-            height: 30px;
+            height: 80px;
             justify-content: center;
             align-items: center;
             display: flex;
-            /* border-radius: 300px; */
         }
     </style>
 </head>
 
 <body>
     <div class="programmer-container">
-        <p class="heading-one">a programmer.</p>
-
+        <p class="heading-one">I am Mary.<br><br>a programmer.</p>
     </div>
 
 
@@ -98,8 +96,9 @@
     <div style="color: rgb(166, 17, 7); font-size: 30px; width: 200px; height: 200px; text-align:center;">
         <p>Hello.</p>
     </div>
-    <div style="font-size: 25px;"> i am a Web Developer. I &#128151 coffee and<br>
-        brew my own beers.<br>
+    <div style="font-size: 25px;">I am a Web Developer. I &#128151 Music,<br>
+         my love for music serves as a driving force
+         <br> that fuels my creativity and enriches my life.<br>
     </div>
     <br>
     <div class="dots-line">
@@ -142,11 +141,10 @@
     <div style="color:  rgb(166, 17, 7); font-size: 30px; width: 200px; height: 200px; text-align:center;">
         <p>Get In Touch</p>
     </div>
-    <h2 style="color: rgb(166, 17, 7);">If you love coffee as much as i do.</h2><br>
+    <h2 style="color: rgb(166, 17, 7);">If you love Music as much as i do.</h2><br>
     <p class="larger-text3">
-        Love hot coffee as much as I do? Let's talk about<br>
-        how your favorite way to have it while we code.
-    </p><br>
+        Love Music as much as I do? Let's talk about<br>
+        our favorite local and international bands and artists, while we code.</p><br>
     <br>
     <div style="color: rgb(166, 17, 7); font-size: 40px;">
         <a href="mailto:obinechemary.12@gmail.com"><button
